<resources>
    <string name="app_name">ILive</string>
    <string name="username">你的用户名</string>
    <string name="password">请输入密码</string>
    <string name="register_account">注册账号</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="email">请输入邮箱</string>
    <string name="default_username">未知</string>
    <string name="live">直播</string>
    <string name="focus">关注</string>
    <string name="home">首页</string>
    <string name="my_focus">我的关注</string>
    <string name="theme">主题</string>
    <string name="night">夜间</string>
    <string name="exit_account">退出账户</string>
    <string name="blank" />
    <string name="search">搜索房间或主播</string>
    <string name="recommend">推荐主播</string>
    <string name="live_num">当前共有</string>
    <string name="anchor">主播名</string>
    <string name="people_num">9999</string>
    <string name="room_name">房间名</string>
    <string name="field">英雄联盟</string>
    <string name="live_room_name">HUAWEI nova 3e 新品发布会</string>
    <string name="live_room_owner">华为终端</string>
    <string name="Live_room_people_num">1.1万</string>
    <string name="plus_focus">+关注</string>

    <string name="edit_label">点击下方标签可将其添加到我的常用标签，拖动标签可进行排序</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_danmaku">输入想发送的弹幕</string>
    <string name="gezhibo">个直播</string>
    <string name="zero">0</string>
    <string name="cancle_focus">取消关注</string>
    <string name="no_focus">您还什么都没有关注呢！</string>
    <string name="camera_live">摄像头直播</string>
    <string name="screen_live">录屏直播</string>
    <string name="my_live_room">我的直播间</string>
    <string name="room_setting">房间设置</string>
    <string name="edit">编辑</string>
    <string name="game">游戏</string>
    <string name="phoneGame">手游</string>
    <string name="common">常用</string>
    <string name="entertainment">娱乐</string>
    <string name="see_more">查看更多</string>
    <string name="cancel">取消</string>
    <string name="no_search">什么都没有搜到呢^_^</string>
</resources>
