<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <com.graduation.fuyu.ilive.widget.CircleImageView
        android:id="@+id/fragment_focus_item_iv_head"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/welcome"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fragment_focus_item_tv_room_owner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:maxEms="6"
                android:gravity="center_vertical"
                android:text="@string/live_room_owner"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/fragment_focus_item_tv_room_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:maxEms="6"
                android:gravity="center_vertical"
                android:text="@string/live_room_name"
                android:textColor="@color/colorGrey666666"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/fragment_focus_item_btn_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_focus_selector"
                android:text="@string/cancle_focus" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
