<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center_horizontal">
    <android.support.v7.widget.CardView
        android:id="@+id/item_card"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:foreground="?android:attr/selectableItemBackground"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="ContentDescription"

        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="160dp"
                android:layout_height="90dp">
                <ImageView
                    android:id="@+id/item_card_iv"
                    android:layout_width="160dp"
                    android:layout_height="90dp"
                    android:src="@mipmap/default1"
                    android:background="@drawable/shape_rectangle_circle_corner"/>
                <TextView
                    android:id="@+id/item_card_tv_anchor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:ellipsize="end"
                    android:maxEms="6"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:text="@string/anchor"
                    tools:ignore="RelativeOverlap" />
                <ImageView
                    android:id="@+id/item_card_iv_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/item_card_tv_people_num"
                    android:layout_toStartOf="@+id/item_card_tv_people_num"
                    android:src="@drawable/ic_people_white_24dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/item_card_tv_people_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:maxEms="6"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:text="@string/people_num"
                    android:visibility="gone"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/item_card_tv_room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxEms="10"
                android:maxLines="1"
                android:textSize="15sp"
                android:text="@string/room_name"/>

            <TextView
                android:id="@+id/item_card_tv_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxEms="10"
                android:maxLines="1"
                android:layout_marginStart="5dp"
                android:text="@string/field" />
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>
