<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.graduation.fuyu.ilive.SearchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorAccent"
            />
        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:theme="@style/AppTheme.TransparentStatusBar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.SearchView
                    android:id="@+id/activity_search_search_action"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:imeOptions="actionSearch"
                    app:queryHint="@string/search"
                    app:queryBackground="@drawable/shape_search_view">
                </android.support.v7.widget.SearchView>
                <TextView
                    android:id="@+id/activity_search_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>
        <TextView
            android:id="@+id/activity_search_tv_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_search"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_search_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
