<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_liveRoom_ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context="com.graduation.fuyu.ilive.LiveRoomActivity">

    <RelativeLayout
        android:id="@+id/activity_liveRoom_small_screen"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:background="#000"
        android:visibility="visible"/>
    <RelativeLayout
        android:id="@+id/activity_liveRoom_full_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:gravity="center"
        android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.graduation.fuyu.ilive.widget.CircleImageView
                    android:id="@+id/activity_liveRoom_iv_head"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/welcome"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@android:color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/activity_liveRoom_tv_room_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/live_room_name"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/activity_liveRoom_Room_owner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/live_room_owner"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="gone">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_people_outline_grey_24dp"/>
                                <TextView
                                    android:id="@+id/activity_liveROom_tv_room_people_num"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#666666"
                                    android:text="@string/Live_room_people_num"/>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="36dp"
                            android:layout_weight="1"
                            android:gravity="center">

                            <Button
                                android:id="@+id/activity_liveRoom_btn_focus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/btn_focus_selector"
                                android:text="@string/plus_focus"
                                android:textColor="@color/colorAccent" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#DCDCDC"/>

            <android.support.design.widget.TabLayout
                android:id="@+id/activity_liveRoom_tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabSelectedTextColor="@color/colorAccent"
                app:tabTextColor="@color/colorBlack"
                >
            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/activity_liveRoom_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v4.view.ViewPager>



</LinearLayout>