<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/fragment_live_swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="LiveFragment"
            tools:context="com.graduation.fuyu.ilive.fragment.LiveFragment">
            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <!--<include layout="@layout/fragment_live_search_tab"/>-->


                    <com.graduation.fuyu.ilive.widget.ViewPicture
                        android:id="@+id/fragment_live_viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="140dp">
                    </com.graduation.fuyu.ilive.widget.ViewPicture>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">
                        <LinearLayout
                            android:id="@+id/fragment_live_entertainment"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:src="@mipmap/entertainment"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/entertainment"
                                android:layout_marginTop="10dp"
                                android:textSize="12sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/fragment_live_pcGame"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:src="@mipmap/pcgame"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="12sp"
                                android:text="@string/game"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/fragment_live_phoneGame"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:src="@mipmap/phone"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="12sp"
                                android:text="@string/phoneGame"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/fragment_live_common"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:src="@mipmap/common"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="12sp"
                                android:text="@string/common"/>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGrey"
                        android:layout_marginBottom="15dp"/>

                    <!--<include layout="@layout/fragment_live_recommend_bar"-->
                        <!--android:visibility="gone"/>-->

                    <!--<android.support.v7.widget.RecyclerView-->
                        <!--android:id="@+id/fragment_live_recycler_view"-->
                        <!--android:scrollbars="vertical"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:visibility="gone"/>-->
                    <com.graduation.fuyu.ilive.widget.HomeRecommend
                        android:id="@+id/fragment_live_hr_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">
                    </com.graduation.fuyu.ilive.widget.HomeRecommend>
                    <com.graduation.fuyu.ilive.widget.HomeRecommend
                        android:id="@+id/fragment_live_hr_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">
                    </com.graduation.fuyu.ilive.widget.HomeRecommend>
                    <com.graduation.fuyu.ilive.widget.HomeRecommend
                        android:id="@+id/fragment_live_hr_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">
                    </com.graduation.fuyu.ilive.widget.HomeRecommend>
                    <com.graduation.fuyu.ilive.widget.HomeRecommend
                        android:id="@+id/fragment_live_hr_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">
                    </com.graduation.fuyu.ilive.widget.HomeRecommend>
                </LinearLayout>


            </android.support.v4.widget.NestedScrollView>

        </android.support.v4.widget.SwipeRefreshLayout>



    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="16dp"-->
        <!--android:layout_gravity="end|bottom"-->
        <!--android:backgroundTint="@color/colorAccent"-->
        <!--android:src="@drawable/ic_video_call_white_24dp"-->
        <!--android:elevation="6dp"-->
        <!--app:layout_anchor="@id/fragment_live_view_anchor"-->
        <!--app:layout_anchorGravity="center"-->
        <!--app:fabSize="normal"-->
        <!--app:borderWidth="0dp"/>-->

</android.support.design.widget.CoordinatorLayout>

